# email-forwarding-cdk

./: .env.example  .gitignore  LICENSE  README.md  cdk.json  domain-map.json.example  email-map.json.example  package-lock.json  package.json  pyproject.toml
lib/: domain-companion-cdk-stack.ts  domain-map-config.ts  domain-redirection-stack.ts  email-forwarding-cdk-stack.ts  email-forwarding-stack.ts  env-config.ts
resources/email-lambda/: email_handler.py  index.py  ssm_handler.py
resources/lambda/: domain-lambda.py  domain_redirect.py  email_handler.py  ssm_handler.py
resources/redirect-lambda/: index.py
test/: email-forwarding-cdk.test.ts
